--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,4 @@
 /* This file is for your main application css. */
 
-@import "./phoenix.css";
+/* @import "./phoenix.css"; */
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
