--- a/lib/phoenix_todo_app_web/templates/todos/index.html.eex
+++ b/lib/phoenix_todo_app_web/templates/todos/index.html.eex
@@ -1,5 +1,12 @@
 <h1># TODOS</h1>
 
+<form>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+</form>
+
 <table>
     <thead>
         <tr>
