Implements Tasks migration, context and schema.

--- a/lib/phoenix_todo_app_web/templates/tasks/index.html.eex
+++ b/lib/phoenix_todo_app_web/templates/tasks/index.html.eex
@@ -20,10 +20,10 @@
 					</tr>
 			</thead>
 			<tbody>
-					<%= for item <- @todo_items do %>
+					<%= for task <- @tasks do %>
 							<tr>
-									<td><%= item.title %></td>
-									<td><%= format_status(item.status) %></td>
+									<td><%= task.title %></td>
+									<td><%= format_status(task.status) %></td>
 							</tr>
 					<% end %>
 			</tbody>
